comicei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <header>
-        <h1>Titulo do site</h1>
+        <h1>Cursos Gratis</h1>
     </header>
     <article>
-        <h2>Artigo001</h2>
-        <p>Artigo002</p>
+        <h2>Cursos de html5 com css3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fugiat quae laborum a asperiores distinctio, tempora earum quibusdam harum incidunt provident, nemo necessitatibus. Deleniti dolor libero consectetur explicabo necessitatibus! Earum?</p>
     </article>
 </body>
 </html>
