--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estilos/styles.css">
 </head>
 <body>
+    <main>
     <header>
         <h1>Cursos Gratis</h1>
     </header>
@@ -14,5 +15,6 @@
         <h2>Cursos de html5 com css3</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fugiat quae laborum a asperiores distinctio, tempora earum quibusdam harum incidunt provident, nemo necessitatibus. Deleniti dolor libero consectetur explicabo necessitatibus! Earum?</p>
     </article>
+</main>
 </body>
 </html>
